--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,13 +18,13 @@
     <nav>
       <ul class="nav-list">
         <li class="nav-list-item">
-          <%= link_to "Top", top_path %>
+          <%= link_to "Top", homes_top_path %>
         </li>
         <li class="nav-list-item">
-          <%= link_to "Lists", lists_path %>
+          <%= link_to "Lists", lists_index_path %>
         </li>
         <li class="nav-list-item">
-          <%= link_to "New List", new_list_path %>
+          <%= link_to "New List", lists_new_path %>
         </li>
       </ul>
     </nav>
