--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,11 +1,15 @@
 <div class="list-wrap">
 <% @lists.each do |list| %>
   <div class="list-box">
+    <p>画像</p>
     <% if list.image.attached? %>
       <%= image_tag list.image, size: "200x200" %>
     <% else %>
       <%= image_tag 'no_image', size: "200x200" %>
     <% end %>
+    
+    <%= image_tag list.image, size: "200x200" %>
+  
     <div class="list-comment">
       <span class="list-body"><%= list.body %></span>
       <span class="list-title"><%= link_to list.title, list_path(list.id) %></span>
