--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
           <%= link_to "Lists", lists_path %>
         </li>
         <li class="nav-list-item">
-          <%= link_to "New List", lists_path %>
+          <%= link_to "New List", new_list_path %>
         </li>
       </ul>
     </nav>
